# motor-ajedrez

./: .gitignore  CMakeLists.txt
include/: Alfil.hpp  Caballo.hpp  Casilla.hpp  Ficha.hpp  Jugador.hpp  Partida.hpp  Peon.hpp  Reina.hpp  Rey.hpp  Tablero.hpp  TiposJuego.hpp  Torre.hpp
src/: Alfil.cpp  Caballo.cpp  Casilla.cpp  Ficha.cpp  Jugador.cpp  Partida.cpp  Peon.cpp  Reina.cpp  Rey.cpp  Tablero.cpp  Torre.cpp  main.cpp
